--- a/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Csharp_ModelGen.Plugin/config.ini
+++ b/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Csharp_ModelGen.Plugin/config.ini
@@ -1,5 +1,5 @@
 [CsharpModelGenConfig]
-NameSpace=b
-OutPut=C:\Users\Administrator\Desktop\1\
+NameSpace=Ats.YuKon.Model
+OutPut=G:\MyWork\Ygo\temp\
 TableFilter=AQ;
-IsShowGenCode=True
+IsShowGenCode=False
