--- a/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Plugin/config.ini
+++ b/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Plugin/config.ini
@@ -1,2 +1,2 @@
 ﻿[Oracle]
-192.168.2.217="Data Source=192.168.2.217:1521/atsdb; User Id=ats; Password=ats"
+192.168.2.251="Data Source=192.168.2.251:1521/atsdb; User Id=ukon; Password=ukon"
