--- a/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Csharp_ModelGen.Plugin/config.ini
+++ b/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Csharp_ModelGen.Plugin/config.ini
@@ -1,5 +1,16 @@
 [CsharpModelGenConfig]
-NameSpace=Ats.YuKon.Model
-OutPut=G:\MyWork\Ygo\temp\
-TableFilter=AQ;
-IsShowGenCode=False
+ModelNameSpace=
+DALNameSpace=
+OutPut=
+TableFilter=
+IsShowGenCode=True
+CodeRule=д╛хо
+Ibatis=
+[CsharpCodeGenConfig]
+ModelNameSpace=Ats.YuKon.Model
+DALNameSpace=Ats.YuKon.DAL.WebService.DataManager
+OutPut=C:\Users\Administrator\Desktop\1\
+TableFilter=
+IsShowGenCode=True
+CodeRule=ibatis
+Ibatis=G:\old\MDT Train\ATS_MODEL_Dev\ATSModelConfig_ORA.xml
