--- a/trunk/MDT_Tools/MDT.Tools.DB.Csharp_CodeGen.Plugin/MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj
+++ b/trunk/MDT_Tools/MDT.Tools.DB.Csharp_CodeGen.Plugin/MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj
@@ -5,15 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{192D868F-6350-4498-96A1-284B8F45EDF8}</ProjectGuid>
+    <ProjectGuid>{7E4BC7D2-4D04-44C8-9BF7-042236C78F76}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MDT.Tools.DB.Java_CodeGen.Plugin</RootNamespace>
-    <AssemblyName>MDT.Tools.DB.Java_CodeGen.Plugin</AssemblyName>
+    <RootNamespace>MDT.Tools.DB.Csharp_CodeGen.Plugin</RootNamespace>
+    <AssemblyName>MDT.Tools.DB.Csharp_CodeGen.Plugin</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <StartupObject>
-    </StartupObject>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
@@ -33,6 +31,8 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>MDT.Tools.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -61,17 +61,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gen\GenJavaWS.cs" />
-    <Compile Include="Gen\GenJavaSpringConfig.cs" />
-    <Compile Include="Java_CodeGenPlugin.cs" />
-    <Compile Include="Gen\GenJavaBS.cs" />
-    <Compile Include="Model\JavaCodeGenConfig.cs" />
+    <Compile Include="Csharp_CodeGenPlugin.cs" />
+    <Compile Include="Gen\GenCsharpModel.cs" />
+    <Compile Include="Gen\GenCsharpDALWebService.cs" />
+    <Compile Include="Model\CsharpCodeGenConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Java_CodeGenConfigUI.cs">
+    <Compile Include="UI\Csharp_CodeGenConfigUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\Java_CodeGenConfigUI.Designer.cs">
-      <DependentUpon>Java_CodeGenConfigUI.cs</DependentUpon>
+    <Compile Include="UI\Csharp_CodeGenConfigUI.Designer.cs">
+      <DependentUpon>Csharp_CodeGenConfigUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Utils\CodeGenHelper.cs" />
     <Compile Include="Utils\CodeGenRuleHelper.cs" />
@@ -80,22 +79,6 @@
     <Compile Include="Utils\IbatisConfigHelper.cs" />
     <Compile Include="Utils\IniConfigHelper.cs" />
     <Compile Include="Utils\PluginShareHelper.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MDT.ThirdParty.Controls\MDT.ThirdParty.Controls.csproj">
-      <Project>{C3DDB32F-3E50-484A-9142-F93472A14323}</Project>
-      <Name>MDT.ThirdParty.Controls</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MDT.Tools.Core\MDT.Tools.Core.csproj">
-      <Project>{D53A3267-6A1D-4258-B7A7-14BBEDA88D44}</Project>
-      <Name>MDT.Tools.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="UI\Java_CodeGenConfigUI.resx">
-      <DependentUpon>Java_CodeGenConfigUI.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -113,6 +96,25 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MDT.ThirdParty.Controls\MDT.ThirdParty.Controls.csproj">
+      <Project>{C3DDB32F-3E50-484A-9142-F93472A14323}</Project>
+      <Name>MDT.ThirdParty.Controls</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MDT.Tools.Core\MDT.Tools.Core.csproj">
+      <Project>{D53A3267-6A1D-4258-B7A7-14BBEDA88D44}</Project>
+      <Name>MDT.Tools.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\Csharp_CodeGenConfigUI.resx">
+      <DependentUpon>Csharp_CodeGenConfigUI.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MDT.Tools.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
