--- a/trunk/MDT_Tools/MDT.Tools/MDT.Tools.csproj
+++ b/trunk/MDT_Tools/MDT.Tools/MDT.Tools.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Image\db.ico" />
+    <Content Include="Image\exit.png" />
     <Content Include="Image\logo.ico" />
     <Content Include="Image\New.ico" />
     <Content Include="Image\Open.ico" />
@@ -125,7 +126,7 @@
       <Project>{D53A3267-6A1D-4258-B7A7-14BBEDA88D44}</Project>
       <Name>MDT.Tools.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MDT.Tools.DB.Csharp_ModelGen.Plugin\MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj">
+    <ProjectReference Include="..\MDT.Tools.DB.Csharp_CodeGen.Plugin\MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj">
       <Project>{7E4BC7D2-4D04-44C8-9BF7-042236C78F76}</Project>
       <Name>MDT.Tools.DB.Csharp_CodeGen.Plugin</Name>
     </ProjectReference>
