--- a/trunk/MDT_Tools/MDT.Tools.DB.Csharp_CodeGen.Plugin/MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj
+++ b/trunk/MDT_Tools/MDT.Tools.DB.Csharp_CodeGen.Plugin/MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Csharp_CodeGenPlugin.cs" />
     <Compile Include="Gen\GenCsharpModel.cs" />
     <Compile Include="Gen\GenCsharpDALWebService.cs" />
+    <Compile Include="Gen\GenCsharpSpringConfig.cs" />
+    <Compile Include="Gen\GenCsharpBLLAndGUI.cs" />
     <Compile Include="Model\CsharpCodeGenConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Csharp_CodeGenConfigUI.cs">
