--- a/trunk/MDT_Tools/MDT.Tools/MDT.Tools.csproj
+++ b/trunk/MDT_Tools/MDT.Tools/MDT.Tools.csproj
@@ -131,6 +131,7 @@
     <ProjectReference Include="..\MDT.Tools.DB.Csharp_CodeGen.Plugin\MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj">
       <Project>{7E4BC7D2-4D04-44C8-9BF7-042236C78F76}</Project>
       <Name>MDT.Tools.DB.Csharp_CodeGen.Plugin</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\MDT.Tools.DB.DocGen.Plugin\MDT.Tools.DB.DocGen.Plugin.csproj">
       <Project>{093DCCC0-573A-4E93-A2B2-94697F676D6B}</Project>
