--- a/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Csharp_CodeGen.Plugin/config.ini
+++ b/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Csharp_CodeGen.Plugin/config.ini
@@ -2,11 +2,11 @@
 ModelNameSpace=Ats.YuKon.Model
 IDALNameSpace=Ats.YuKon.DAL.Interface.DataManager
 DALNameSpace=Ats.YuKon.DAL.WebService.DataManager
-BLLNameSpace=Ats.YuKon.Plugin.DataManager
-PluginName=PermissionFilters
-OutPut=C:\Users\Administrator\Desktop\1\
+BLLNameSpace=
+PluginName=
+OutPut=
 TableFilter=
 IsShowGenCode=True
-IsShowComment=True
+IsShowComment=False
 CodeRule=ibatis
-Ibatis=G:\old\MDT Train\ATS_MODEL_Dev\ATSModelConfig_ORA.xml
+Ibatis=
