--- a/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Java_CodeGen.Plugin/config.ini
+++ b/trunk/MDT_Tools/client/plugin/MDT.Tools.DB.Java_CodeGen.Plugin/config.ini
@@ -1,8 +1,8 @@
 [JavaCodeGenConfig]
-BSPackage=ats.yukon.datamanager
-WSPackage=
+BSPackage=ats.yukon.datamanager.bs
+WSPackage=ats.yukon.integration.endpoint.ws.datamanager
 OutPut=
 TableFilter=
 IsShowGenCode=True
-CodeRule=д╛хо
-Ibatis=
+CodeRule=ibatis
+Ibatis=G:\old\MDT Train\ATS_MODEL_Dev\ATSModelConfig_ORA.xml
