--- a/MDT_Tools/MDT.Tools.DB.Csharp_CodeGen.Plugin/MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj
+++ b/MDT_Tools/MDT.Tools.DB.Csharp_CodeGen.Plugin/MDT.Tools.DB.Csharp_CodeGen.Plugin.csproj
@@ -74,11 +74,8 @@
     <Compile Include="UI\Csharp_CodeGenConfigUI.Designer.cs">
       <DependentUpon>Csharp_CodeGenConfigUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="Utils\CodeGenHelper.cs" />
     <Compile Include="Utils\CodeGenRuleHelper.cs" />
-    <Compile Include="Utils\DataTypeMappingHelper.cs" />
     <Compile Include="Utils\FilePathHelper.cs" />
-    <Compile Include="Utils\IbatisConfigHelper.cs" />
     <Compile Include="Utils\IniConfigHelper.cs" />
     <Compile Include="Utils\PluginShareHelper.cs" />
   </ItemGroup>
@@ -108,6 +105,11 @@
     <ProjectReference Include="..\MDT.Tools.Core\MDT.Tools.Core.csproj">
       <Project>{D53A3267-6A1D-4258-B7A7-14BBEDA88D44}</Project>
       <Name>MDT.Tools.Core</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\MDT.Tools.DB.Common\MDT.Tools.DB.Common.csproj">
+      <Project>{B75768DD-8D6D-4E35-AEB7-F24BB3EFC8C0}</Project>
+      <Name>MDT.Tools.DB.Common</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
