--- a/MDT_Tools/MDT.Tools.Core/MDT.Tools.Core.csproj
+++ b/MDT_Tools/MDT.Tools.Core/MDT.Tools.Core.csproj
@@ -92,21 +92,25 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="UI\Code.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\Code.Designer.cs">
       <DependentUpon>Code.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Explorer.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\Explorer.Designer.cs">
       <DependentUpon>Explorer.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Doc.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\Doc.designer.cs">
       <DependentUpon>Doc.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\ToolWindow.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\ToolWindow.Designer.cs">
       <DependentUpon>ToolWindow.cs</DependentUpon>
@@ -116,6 +120,7 @@
     <Compile Include="Utils\LogHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\MachineHelper.cs" />
+    <Compile Include="Utils\NVelocityHelper.cs" />
     <Compile Include="Utils\ReflectionHelper.cs" />
   </ItemGroup>
   <ItemGroup>
